Ensure that new toolbar actions added to incognito toolbars become visible

When a new action is added to the incognito toolbar (which can happen with the
Media Router component action), it should become visible regardless of the state
of the non-incognito toolbar. This change ensures that and adds a unit test.

BUG=668039

Review-Url: https://codereview.chromium.org/2539153003
Cr-Commit-Position: refs/heads/master@{#435675}

Former-commit-id: 3a17a81205b7482b758b8fdad29aa7d759742f50